# app/api_health.go
@@ -20,8 +20,11 @@ import (
 //	@Summary		Get health data
 //	@Description	Retrieves memory usage, goroutine count, version, hostname, Go runtime version, and OS.
 //	@Tags			info
+//	@Produce		json
+//	@Security		ApiKeyAuth
 //	@Success		200	{object}	health.Model	"Health data successfully retrieved"
-//	@Router			/api/health [get]
+//	@Failure		401	{string}	string			"Unauthorized"
+//	@Router			/health [get]
 func (app *App) HandleHealth() http.Handler {
 	return http.HandlerFunc(
 		func(w http.ResponseWriter, r *http.Request) {
@@ -29,23 +32,6 @@ func (app *App) HandleHealth() http.Handler {
 			web.Encode(w, http.StatusOK, resp)
 		},
 	)
-}
-
-// HandleReady provides a readiness check endpoint.
-//
-// Kubernetes uses this endpoint to determine if the pod can serve traffic.
-// Checks include application dependencies such as meters, GPIO, or DB.
-//
-//	@Summary		Readiness check
-//	@Description	Checks if the application and its dependencies are ready to serve traffic.
-//	@Tags			info
-//	@Success		200	{object}	health.Model	"Application is ready"
-//	@Router			/api/ready [get]
-func (app *App) HandleLive() http.Handler {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		resp := health.GetCurrentHealth(MODULE, VERSION)
-		web.Encode(w, http.StatusOK, resp)
-	})
 }
 
 // HandleReady provides a readiness check endpoint for Kubernetes.
@@ -57,7 +43,7 @@ func (app *App) HandleLive() http.Handler {
 //	@Description	Checks if the application and its dependencies are ready to serve traffic.
 //	@Tags			info
 //	@Success		200	{object}	health.Model	"Application is ready"
-//	@Router			/api/ready [get]
+//	@Router			/ready [get]
 func (app *App) HandleReady() http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 
