# app/routes.go
@@ -24,7 +24,6 @@ import (
 const (
 	PathVersion = "/version"
 	PathHealth  = "/health"
-	PathLive    = "/alive"
 	PathReady   = "/ready"
 	PathData    = "/data"
 	PathSwagger = "/swagger/"
@@ -49,10 +48,9 @@ func (app *App) SetupRoutes() {
 
 	// Public routes
 	mux.Handle("GET "+PathVersion, app.HandleVersion())
-	mux.Handle("GET "+PathHealth, app.HandleHealth())
 
 	// Protected routes
-	mux.Handle("GET "+PathLive, web.WithAuth(app.HandleLive(), webCfg))
+	mux.Handle("GET "+PathHealth, web.WithAuth(app.HandleHealth(), webCfg))
 	mux.Handle("GET "+PathReady, web.WithAuth(app.HandleReady(), webCfg))
 	mux.Handle("GET "+PathData, web.WithAuth(app.HandleData(), webCfg))
 
